// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <div
    class="sc-pyfCe ioMYCD"
  >
    <div
      class="sc-jrcTuL dUmKw"
    />
    <div
      class="sc-kDvujY bOLdOS"
    >
      <div
        aria-hidden="true"
        class="sc-idXgbr gfmFsp"
      >
        <div
          class="sc-dIfARi dgunAK date container"
        >
          <div
            class="sc-kgTSHT deXyHd"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              NaN Invalid Date
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              NaN
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              Invalid Date
            </span>
          </div>
        </div>
        <div
          class="sc-hHTYSt fLfAqY"
        >
          <h1
            class="sc-lllmON bhqFzd"
          >
            Blog 1 
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <div
    class="sc-pyfCe ioMYCD"
  >
    <div
      class="sc-jrcTuL dUmKw"
    />
    <div
      class="sc-kDvujY bOLdOS"
    >
      <div
        aria-hidden="true"
        class="sc-idXgbr gfmFsp"
      >
        <div
          class="sc-dIfARi dgunAK date container"
        >
          <div
            class="sc-kgTSHT deXyHd"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              23-30 Dec
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              23-30
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              Dec
            </span>
          </div>
        </div>
        <div
          class="sc-hHTYSt fLfAqY"
        >
          <h1
            class="sc-lllmON bhqFzd"
          >
            Untitled blog (DELETED)
          </h1>
          <div
            class="sc-iveFHk bFdmXo"
          >
            <div
              class="sc-ilhmMj"
            >
              <span
                class="sc-jIRcFI dKyCGb"
                type="travel"
              >
                Travel
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-dmctIk kewHjU"
        >
          <div
            class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
          >
            <style>
              
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
            </style>
            <div
              class="sc-bqWxrE llbmDz"
              style="padding-bottom: 100%;"
            >
              <div
                class="sc-ksBlkl bneFOf"
              >
                <div
                  class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                >
                  <div
                    class="sc-csuSiG FGYJx"
                    style="margin-left: -0px;"
                  />
                </div>
              </div>
              <div
                class="gg-image__img--hide-no-js"
              >
                <img
                  alt="card"
                  class="sc-fnGiBr hAYXVm"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="sc-fEXmlR bJmlUm"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
              <div
                class="gg-image__img--hide-js"
              >
                <img
                  alt="card"
                  class="sc-fnGiBr hImQle"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="sc-fEXmlR buIvvi"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <div
    class="sc-pyfCe ioMYCD"
  >
    <div
      class="sc-jrcTuL dUmKw"
    />
    <div
      class="sc-kDvujY bOLdOS"
    >
      <div
        aria-hidden="true"
        class="sc-idXgbr gfmFsp"
      >
        <div
          class="sc-dIfARi dgunAK date container"
        >
          <div
            class="sc-kgTSHT deXyHd"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              23-30 Dec
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              23-30
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              Dec
            </span>
          </div>
        </div>
        <div
          class="sc-hHTYSt fLfAqY"
        >
          <h1
            class="sc-lllmON bhqFzd"
          >
            St Ives  2018
          </h1>
          <div
            class="sc-iveFHk bFdmXo"
          >
            <div
              class="sc-ilhmMj"
            >
              <span
                class="sc-jIRcFI dKyCGb"
                type="travel"
              >
                Travel
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-dmctIk kewHjU"
        >
          <div
            class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
          >
            <style>
              
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
            </style>
            <div
              class="sc-bqWxrE llbmDz"
              style="padding-bottom: 100%;"
            >
              <div
                class="sc-ksBlkl bneFOf"
              >
                <div
                  class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                >
                  <div
                    class="sc-csuSiG FGYJx"
                    style="margin-left: -0px;"
                  />
                </div>
              </div>
              <div
                class="gg-image__img--hide-no-js"
              >
                <img
                  alt="card"
                  class="sc-fnGiBr hAYXVm"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="sc-fEXmlR bJmlUm"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
              <div
                class="gg-image__img--hide-js"
              >
                <img
                  alt="card"
                  class="sc-fnGiBr hImQle"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="sc-fEXmlR buIvvi"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="sc-pyfCe ioMYCD"
  >
    <div
      class="sc-jrcTuL dUmKw"
    />
    <div
      class="sc-kDvujY bOLdOS"
    >
      <div
        aria-hidden="true"
        class="sc-idXgbr gfmFsp"
      >
        <div
          class="sc-dIfARi dgunAK date container"
        >
          <div
            class="sc-kgTSHT deXyHd"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              NaN Invalid Date
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              NaN
            </span>
          </div>
          <div
            class="sc-fLcnxK fsTTzg"
          >
            <span
              class="sc-ezOQGI jUiNOC"
            >
              Invalid Date
            </span>
          </div>
        </div>
        <div
          class="sc-hHTYSt fLfAqY"
        >
          <h1
            class="sc-lllmON bhqFzd"
          >
            Blog 1 
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-iveFHk bFdmXo"
            >
              <div
                class="sc-ilhmMj"
              >
                <span
                  class="sc-jIRcFI dKyCGb"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-dmctIk kewHjU"
          >
            <div
              class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-bqWxrE llbmDz"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-ksBlkl bneFOf"
                >
                  <div
                    class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                  >
                    <div
                      class="sc-csuSiG FGYJx"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hAYXVm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR bJmlUm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hImQle"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR buIvvi"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-iveFHk bFdmXo"
            >
              <div
                class="sc-ilhmMj"
              >
                <span
                  class="sc-jIRcFI dKyCGb"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-dmctIk kewHjU"
          >
            <div
              class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-bqWxrE llbmDz"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-ksBlkl bneFOf"
                >
                  <div
                    class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                  >
                    <div
                      class="sc-csuSiG FGYJx"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hAYXVm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR bJmlUm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hImQle"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR buIvvi"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-iveFHk bFdmXo"
            >
              <div
                class="sc-ilhmMj"
              >
                <span
                  class="sc-jIRcFI dKyCGb"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-dmctIk kewHjU"
          >
            <div
              class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-bqWxrE llbmDz"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-ksBlkl bneFOf"
                >
                  <div
                    class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                  >
                    <div
                      class="sc-csuSiG FGYJx"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hAYXVm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR bJmlUm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hImQle"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR buIvvi"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-iveFHk bFdmXo"
            >
              <div
                class="sc-ilhmMj"
              >
                <span
                  class="sc-jIRcFI dKyCGb"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-dmctIk kewHjU"
          >
            <div
              class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-bqWxrE llbmDz"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-ksBlkl bneFOf"
                >
                  <div
                    class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                  >
                    <div
                      class="sc-csuSiG FGYJx"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hAYXVm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR bJmlUm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hImQle"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR buIvvi"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
    <button
      class="sc-dkrFOg jBUywy blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Delete blog
      </span>
    </button>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-iveFHk bFdmXo"
            >
              <div
                class="sc-ilhmMj"
              >
                <span
                  class="sc-jIRcFI dKyCGb"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-dmctIk kewHjU"
          >
            <div
              class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-bqWxrE llbmDz"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-ksBlkl bneFOf"
                >
                  <div
                    class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                  >
                    <div
                      class="sc-csuSiG FGYJx"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hAYXVm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR bJmlUm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hImQle"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR buIvvi"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="sc-dkrFOg jBUywy blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Delete blog
      </span>
    </button>
    <div
      class="sc-pyfCe ioMYCD"
    >
      <div
        class="sc-jrcTuL dUmKw"
      />
      <div
        class="sc-kDvujY bOLdOS"
      >
        <div
          aria-hidden="true"
          class="sc-idXgbr gfmFsp"
        >
          <div
            class="sc-dIfARi dgunAK date container"
          >
            <div
              class="sc-kgTSHT deXyHd"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fLcnxK fsTTzg"
            >
              <span
                class="sc-ezOQGI jUiNOC"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-hHTYSt fLfAqY"
          >
            <h1
              class="sc-lllmON bhqFzd"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-iveFHk bFdmXo"
            >
              <div
                class="sc-ilhmMj"
              >
                <span
                  class="sc-jIRcFI dKyCGb"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-dmctIk kewHjU"
          >
            <div
              class="sc-eDWCr hezuNh sc-bBABsx gJAByb"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-bqWxrE llbmDz"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-ksBlkl bneFOf"
                >
                  <div
                    class="sc-ipEyDJ giwvRO sc-hBxehG larhnz"
                  >
                    <div
                      class="sc-csuSiG FGYJx"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hAYXVm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR bJmlUm"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-fnGiBr hImQle"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fEXmlR buIvvi"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="sc-dkrFOg gnxDVu blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
      disabled=""
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
